syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "TaskProtos";

enum eTaskRequestType {
	GetReward = 1;  
	SyncTask=2;
}

enum eTaskResultType {
	SUCCESS=0;
	FAIL=1;
}

message tagTask{
	optional int32 id = 1;
	optional int32 finishType = 2;
	optional int32 drawState = 3;
	optional int32 curProgress =4;
	optional int32 totalProgress =5;
}

message TaskRequest {
	required eTaskRequestType requestType = 1;
    optional int32 id = 2;
}

message TaskResponse {
	optional eTaskRequestType responseType = 1;
	optional eTaskResultType reslutType = 2;
	optional string reslutValue = 3;
	repeated tagTask task = 5;
	optional int32 id = 6;
}

enum OneKeyRewardType{
	EMAIL = 1;	//一键提取邮件
	TASK = 2;	//一键领取任务奖励
	DAILY = 3;	//一键领取日常奖励
	BATTLE_SCORE = 4;	//一键领取竞技场积分奖励
}

enum OneKeyResultType{
	OneKey_SUCCESS = 1;
	DATA_ERROR = 2;	//数据异常
	NO_REWARD = 3;	//没有可以领取的项
	TYPE_ERROR = 4;	//类型错误
	LEVEL_LIMIT = 5; //等级不够
}

message OneKeyGetRewardRequest{
	required OneKeyRewardType oneKeyType = 1;
}

message OneKeyGetRewardResponse{
	required OneKeyResultType result = 1;
	repeated string rewardItems = 2;
}